syntax = "proto3";

package auth;

import "common.proto";

service AdminService {
  rpc Create(CreateAdminRequest) returns (Admin) {}
  rpc GetAll(PaginationRequest) returns (GetAllAdminsResponse) {}
  rpc Update(UpdateAdminRequest) returns (SuccessResponse) {}
}

/*
* Request
*/

message CreateAdminRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UpdateAdminRequest {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}
/*
* response
*/

message GetAllAdminsResponse {
  int32 totalCount = 1;
  repeated Admin admins = 2;
}

message Admin {
  string id = 1;
  string username = 2;
  string email = 3;
}

