syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc LoginAdmin(LoginRequest) returns (LoginResponse) {}
  rpc refreshToken1(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
  string message = 2;
  string collectionName = 3;
  TokenDataResponse data = 4;
}

message TokenDataResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string token = 1;
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SignUpResponse {
  bool status = 1;
  string message = 2;
  string collectionName = 3;
  SignUpVerifyResponse data = 4;
}

message SignUpVerifyResponse{
  string message = 1;
  string url = 2;
}
